[gd_scene load_steps=6 format=3 uid="uid://j8idixyaq84i"]

[ext_resource type="Script" path="res://scripts/buildings/pad.gd" id="1_j0xvl"]
[ext_resource type="PackedScene" uid="uid://ek2ih787nlsh" path="res://scenes/buildings/construction.tscn" id="2_nci4h"]
[ext_resource type="Theme" uid="uid://yuqrvc1r73tw" path="res://themes/main.tres" id="3_emho6"]
[ext_resource type="PackedScene" uid="uid://bw36kh5klwpj" path="res://assets/buildings/pad/pad.gltf" id="3_tq0np"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_chaw6"]
radius = 1.0

[node name="StaticBody3D" type="StaticBody3D"]
script = ExtResource("1_j0xvl")
steel_cost = 300

[node name="Construction" parent="." instance=ExtResource("2_nci4h")]
build_time = 20

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CylinderShape3D_chaw6")

[node name="pad" parent="." instance=ExtResource("3_tq0np")]
visible = false

[node name="Actions" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="RemoveButton" type="Button" parent="Actions"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -304.0
offset_top = -112.0
offset_right = -112.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_emho6")
text = "Remove"

[node name="AddRocketButton" type="Button" parent="Actions"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -96.0
offset_top = -112.0
offset_right = 96.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_emho6")
text = "Add Rocket"

[node name="LaunchButton" type="Button" parent="Actions"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 112.0
offset_top = -112.0
offset_right = 304.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_emho6")
disabled = true
text = "Lauch"

[connection signal="finished" from="Construction" to="." method="_on_construction_finished"]
